# alerts

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
alerts/: __main__.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/references/: alerts.rst  modules.rst
tests/: test_main.py
