[project]
name = "alerts"
version = "0.1.0"
requires-python = ">=3.9"
description = "Python script to send an alert on Discord when a service start or stop."
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "mdevolde", email = "martin.devolder2@gmail.com" },
    { name = "V1rg1lee", email = "virgile.devolder2@gmail.com" }
]

dependencies = [
    "discord.py",
    "requests"
]

[project.urls]
repository = "https://github.com/Communaute-du-RP-FR/alerts.git"


[project.scripts]
alerts = "alerts.__main__:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { include = ["alerts*"] } }
